@startuml "DC"
title Diagramme de classes – Plateforme de vente en ligne (corrigé et structuré par packages)

package Utilisateurs {

    class User {
        - idUser : int
        - nom : String
        - prenom : String
        - login : String
        - mdp : String
    }

    class Client {
        - adresse : String
        - moyenPaiement : String
    }

    class Admin {

    }

    Client --|> User
    Admin --|> User
}

package Produits {

    class Produit {
        - idProduit : int
        - nom : String
        - prix : double
        - description : String
    }

    class Catalogue {
        - idCatalogue : int
        - nom : String
    }

    Catalogue "1" o-- "0..*" Produit : contient >
}

package Commandes {

    class Panier {
        - idPanier : int
    }

    class LignePanier {
        - quantite : int
    }

    class Commande {
        - idCommande : int
        - date : Date
        - statut : String
    }

    class LigneCommande {
        - quantite : int
        - prixUnitaire : double
    }

    ' --- Relations internes ---
    Panier "1" *-- "0..*" LignePanier : contient >
    LignePanier "1" --> "1" Produit

    Commande "1" *-- "1..*" LigneCommande : contient >
    LigneCommande "1" --> "1" Produit
}

Client "1" --> "1" Panier : possède >
Client "0..*" --> "1" Commande : effectue >

@enduml
